Additional Security Fixes

--- a/static/index.html
+++ b/static/index.html
@@ -15,7 +15,7 @@
     <!-- NAVIGATION -->
     <nav class="nav" id="nav">
         <div class="nav-content">
-            <h1 class="logo" data-text="" onclick="window.location.href='/'"></h1>
+            <h1 class="logo" data-text=""></h1>
             <button class="nav-btn" id="auth-btn" aria-label="Auth"></button>
         </div>
     </nav>
@@ -28,9 +28,9 @@
 
     <!-- LIGHTBOX -->
     <div class="lightbox" id="lightbox">
-        <div class="lightbox-backdrop" onclick="window.app?.closeLightbox()"></div>
+        <div class="lightbox-backdrop"></div>
         <div class="lightbox-container">
-            <button class="lightbox-close" onclick="window.app?.closeLightbox()">
+            <button class="lightbox-close">
                 <svg width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
                     <line x1="18" y1="6" x2="6" y2="18"></line>
                     <line x1="6" y1="6" x2="18" y2="18"></line>
@@ -56,9 +56,9 @@
 
     <!-- AUTH MODAL -->
     <div class="auth-modal" id="auth-modal">
-        <div class="auth-backdrop" onclick="window.app?.closeAuthModal()"></div>
+        <div class="auth-backdrop"></div>
         <div class="auth-container">
-            <button class="auth-close" onclick="window.app?.closeAuthModal()">
+            <button class="auth-close">
                 <svg width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
                     <line x1="18" y1="6" x2="6" y2="18"></line>
                     <line x1="6" y1="6" x2="18" y2="18"></line>
